# kassandra

./: .ai-catalog-mapping.json  .gitignore  .gitlab-ci.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEMO_SCRIPT.md  DEVPOST.md  LICENSE  README.md  package-lock.json
.gitlab/duo/: agent-config.yml
agents/: agent.yml
demos/calliope-books/: AGENTS.md  app.js  openapi.json  package-lock.json  package.json
demos/fastapi-shop/: AGENTS.md
demos/hestia-eats/: AGENTS.md  app.js  app.ts  go.mod  main.go  openapi.json  package-lock.json  package.json
demos/midas-bank/: AGENTS.md  app.py  openapi.json  requirements.txt
demos/pageturn/: AGENTS.md  openapi.json  pyproject.toml
demos/pageturn/k6/foundations/: 01.basic.js  02.auth-and-create.js
demos/pageturn/pageturn/: main.py  models.py
demos/pageturn/pageturn/routes/: auth.py  books.py  reviews.py
demos/quickpizza/: AGENTS.md
demos/realworld/: AGENTS.md
docs/: run-log.md
flows/: flow.yml
graphrag/: __main__.py  builder.py  cli.py  retriever.py
k6/kassandra/: mr-36-transfer-ratelimit.js  mr-37-spending-summary.js  mr-41-hestia-promotions-graphrag.md  mr-41-hestia-promotions.js
prompts/: kassandra-system.md
samples/diffs/: 01-add-batch-endpoint.diff
scripts/: analyze-risk.py  generate-report.py  graphrag-proof-output.txt  graphrag-proof-qwen-output.txt  graphrag-proof-qwen.py  graphrag-proof.py  record-demo.ts  run-graphrag.sh  run-k6-test.sh
simulator/: __main__.py  config.py  evaluate.py  run.py  tools.py
slides/: demo.md  theme.css
tests/: test_builder.py  test_integration.py  test_retriever.py
(+21 files in other folders)
