[project]
name = "pageturn"
version = "0.1.0"
description = "PageTurn — minimal bookstore API for Kassandra demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyjwt>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
